# SNN

./: README.md  install_jointstdpmodule_nest.sh  joint_stdp_example.py  jointstdpmodule_example.py  validate_STDP.py
JointSTDPModule/: Makefile.am  bootstrap.sh  configure.ac  iaf_psc_alpha2.cpp  iaf_psc_alpha2.h  joint_stdp_connection.h  jointstdpmodule.cpp  weight_stdp_connection.h
JointSTDPModule/sli/: jointstdpmodule-init.sli
NEST_2_10_0/JointSTDPModule/: Makefile.am  base_connection.h  base_neuron.cpp  base_neuron.h  configure.ac  immediate_inhibition_connection.h  joint_stdp_connection.h  jointstdpmodule.cpp  jointstdpmodule.h  parrot_neuron2.cpp  parrot_neuron2.h  spike_response_neuron.cpp  spike_response_neuron.h  weight_stdp_connection.h
NEST_2_10_0/JointSTDPModule/sli/: jointstdpmodule-init.sli
NEST_2_6_0/JointSTDPModule/: Makefile.am  immediate_inhibition_connection.h  joint_stdp_connection.h  jointstdpmodule.cpp  jointstdpmodule.h  my_base_connection.h  my_base_neuron.cpp  my_base_neuron.h  parrot_neuron2.cpp  parrot_neuron2.h  spike_response_neuron.cpp  spike_response_neuron.h  weight_stdp_connection.h
